Adding some basic code from prvious working file

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -1,18 +1,162 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kaggle Titanic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) 5ac4050] Starting\n",
+      " 1 file changed, 39 insertions(+)\n",
+      " create mode 100644 Titanic.ipynb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      " * [new branch]      master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git add Titanic.ipynb\n",
+    "git commit -m 'Adding some basic code from prvious working file'\n",
+    "git push"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "As usual, import all neccasary stuff into the notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/theerit/anaconda/envs/ipykernel_py2/lib/python2.7/site-packages/IPython/html.py:14: ShimWarning: The `IPython.html` package has been deprecated. You should import from `notebook` instead. `IPython.html.widgets` has moved to `ipywidgets`.\n",
+      "  \"`IPython.html.widgets` has moved to `ipywidgets`.\", ShimWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline \n",
+    "import requests \n",
+    "import StringIO\n",
+    "import zipfile\n",
+    "import numpy as np\n",
+    "import pandas as pd # pandas\n",
+    "import matplotlib.pyplot as plt # module for plotting \n",
+    "\n",
+    "# If this module is not already installed, you may need to install it. \n",
+    "# You can do this by typing 'pip install seaborn' in the command line\n",
+    "import seaborn as sns \n",
+    "\n",
+    "import sklearn.model_selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, I will start by loading the data in panda dataframe and do some EDA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(891, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = pd.read_csv('Train.csv')\n",
+    "#test = pd.read_csv('Test.csv')\n",
+    "print(train.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that the test data has no label and seems to serve submission function. Cross validation and model evaluation will be done based on the data provided in Train.csv file only. Next, split the train,test dataframe into X and Y dataframe where X store the data while Y store the label."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets take a look at class distribution, the distribution is quite uniform so the problem may not need to be treated as imbalance dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Y' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-bd9d68778c60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#Y_dist.columns = ['label','count']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#Y_dist = Y_dist.set_index('label').sort_index().reset_index()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'Y' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Y_dist=pd.DataFrame(Y.label.value_counts())\n",
+    "#Y_dist = Y_dist.reset_index()\n",
+    "#Y_dist.columns = ['label','count']\n",
+    "#Y_dist = Y_dist.set_index('label').sort_index().reset_index()\n",
+    "sns.distplot(Y);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%%bash\n",
-    "git add Titanic.ipynb\n",
-    "git commit -m 'Starting'\n",
-    "git push"
-   ]
+   "source": []
   }
  ],
  "metadata": {
