Adding Xgboost code

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Add so'\n",
+    "git commit -m 'Adding Xgboost code'\n",
     "git push"
    ]
   },
@@ -816,6 +816,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Model Training\n",
+    "For the sake of early versions of model, all features will be used for training/testing.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Feature Evaluation\n",
     "For starter using random forest to evaluate feature importance.\n",
     "Code shamelessly brought from:http://scikit-learn.org/stable/auto_examples/ensemble/plot_forest_importances.html"
@@ -904,13 +912,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "For the sake of early versions use all features."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import xgboost as xgb\n",
+    "# specify parameters via map\n",
+    "param = {'max_depth':2, 'eta':1, 'silent':1, 'objective':'binary:logistic' }\n",
+    "num_round = 2\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
