Finised testing this version

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,19 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "git checko"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -32,9 +20,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat1/wip 2f16b25] Finised training and test on test set\n",
-      " 1 file changed, 3654 insertions(+), 3709 deletions(-)\n",
-      " rewrite Titanic.ipynb (61%)\n",
+      "On branch feat1/wip\n",
+      "Untracked files:\n",
+      "\t.ipynb_checkpoints/\n",
+      "\tXgboost Tutorial.ipynb\n",
+      "\ttest.csv\n",
+      "\ttrain.csv\n",
+      "\n",
+      "nothing added to commit but untracked files present\n",
       "Branch feat1/wip set up to track remote branch feat1/wip from origin.\n"
      ]
     },
@@ -43,14 +36,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   9ad077f..2f16b25  feat1/wip -> feat1/wip\n"
+      "   af209b1..9ad077f  feat1/wip -> feat1/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Finised training and test on test set'\n",
+    "git commit -m 'Changed to new branch'\n",
     "git push --set-upstream origin feat1/wip"
    ]
   },
