--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -20,14 +20,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch feat1/wip\n",
-      "Untracked files:\n",
-      "\t.ipynb_checkpoints/\n",
-      "\tXgboost Tutorial.ipynb\n",
-      "\ttest.csv\n",
-      "\ttrain.csv\n",
-      "\n",
-      "nothing added to commit but untracked files present\n",
+      "[feat1/wip 41ddc0a] Finised testing this version\n",
+      " 1 file changed, 11 insertions(+), 18 deletions(-)\n",
       "Branch feat1/wip set up to track remote branch feat1/wip from origin.\n"
      ]
     },
@@ -36,14 +30,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   af209b1..9ad077f  feat1/wip -> feat1/wip\n"
+      "   704abb3..41ddc0a  feat1/wip -> feat1/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Changed to new branch'\n",
+    "git commit -m 'Finised testing this version'\n",
     "git push --set-upstream origin feat1/wip"
    ]
   },
