Established baseline master branch

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -9,7 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git checkout 'feat1/wip'\n",
+    "git fetch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -18,8 +42,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master ed110ea] Adding Xgboost code\n",
-      " 1 file changed, 25 insertions(+), 2 deletions(-)\n"
+      "[master c0b39e4] Established baseline master branch\n",
+      " 1 file changed, 1500 insertions(+), 1457 deletions(-)\n",
+      " rewrite Titanic.ipynb (81%)\n"
      ]
     },
     {
@@ -27,7 +52,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   fe20684..ed110ea  master -> master\n"
+      "   af209b1..c0b39e4  master -> master\n"
      ]
     }
    ],
