Added confusion matrix

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -20,8 +20,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat1/wip 8a8141e] Added pickle code to save trained model\n",
-      " 1 file changed, 82 insertions(+), 3 deletions(-)\n",
+      "  feat1/wip\n",
+      "* feat2/wip\n",
+      "  master\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[feat1/wip d2c9b10] Added confusion matrix\n",
+      " 1 file changed, 1237 insertions(+), 1196 deletions(-)\n",
       "Branch feat1/wip set up to track remote branch feat1/wip from origin.\n"
      ]
     },
@@ -30,7 +52,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   6932f53..8a8141e  feat1/wip -> feat1/wip\n"
+      "   8a8141e..d2c9b10  feat1/wip -> feat1/wip\n"
      ]
     }
    ],
@@ -38,7 +60,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git commit -m 'Added confusion matrix'\n",
-    "git push --set-upstream origin feat1/wip"
+    "git push --set-upstream origin feat2/wip"
    ]
   },
   {
