Moved to new branch, starting feat2

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,8 +5,9 @@
    "metadata": {},
    "source": [
     "## Kaggle Titanic\n",
-    "### feat1/wip\n",
-    "This branch is the version where we keep all NaN feature to see change in performance."
+    "### feat2/wip\n",
+    "This branch is modified from feat1. Changes are\n",
+    "    - Drop the name feature (it seem redundancy)"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -42,9 +43,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat1/wip d2c9b10] Added confusion matrix\n",
-      " 1 file changed, 1237 insertions(+), 1196 deletions(-)\n",
-      "Branch feat1/wip set up to track remote branch feat1/wip from origin.\n"
+      "[feat2/wip b74c6e0] Added confusion matrix\n",
+      " 1 file changed, 27 insertions(+), 5 deletions(-)\n",
+      "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
     {
@@ -52,14 +53,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   8a8141e..d2c9b10  feat1/wip -> feat1/wip\n"
+      " * [new branch]      feat2/wip -> feat2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Added confusion matrix'\n",
+    "git commit -m 'Moved to new branch, starting feat2'\n",
     "git push --set-upstream origin feat2/wip"
    ]
   },
