--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -12,7 +12,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git checkout 'master'\n",
+    "git fetch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -21,8 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 485571a] Moved to new branch, starting feat2\n",
-      " 1 file changed, 9 insertions(+), 8 deletions(-)\n",
+      "[feat2/wip 8830e17] Finised testing\n",
+      " 1 file changed, 1380 insertions(+), 1410 deletions(-)\n",
       "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
      ]
     },
@@ -31,7 +55,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   b74c6e0..485571a  feat2/wip -> feat2/wip\n"
+      "   485571a..8830e17  feat2/wip -> feat2/wip\n"
      ]
     }
    ],
