Added some markdown

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -8,27 +8,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Master branch. Will diverge from this branch when want to try something new."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTitanic.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "git checkout 'feat1/wip'\n",
-    "git fetch"
+    "git checkout -b 'cost1/wip'"
    ]
   },
   {
@@ -59,7 +54,7 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Established baseline master branch'\n",
+    "git commit -m 'Added some markdown'\n",
     "git push"
    ]
   },
