Branch to cost1/wip

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -16,19 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Switched to a new branch 'cost1/wip'\n",
+      "Already on 'cost1/wip'\n"
+     ]
+    }
+   ],
    "source": [
-    "%%bash\n",
-    "git checkout -b 'cost1/wip'"
+    "%%bash\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -37,9 +45,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master c0b39e4] Established baseline master branch\n",
-      " 1 file changed, 1500 insertions(+), 1457 deletions(-)\n",
-      " rewrite Titanic.ipynb (81%)\n"
+      "[master 7b2c89f] Added some markdown\n",
+      " 1 file changed, 12 insertions(+), 17 deletions(-)\n"
      ]
     },
     {
@@ -47,15 +54,15 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   af209b1..c0b39e4  master -> master\n"
+      "   5233439..7b2c89f  master -> master\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Added some markdown'\n",
-    "git push"
+    "git commit -m 'Branch to cost1/wip'\n",
+    "git push --set -upstream origin cost1/wip"
    ]
   },
   {
