Branch to cost1/wip

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -45,16 +45,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 7b2c89f] Added some markdown\n",
-      " 1 file changed, 12 insertions(+), 17 deletions(-)\n"
+      "[cost1/wip 4e7787a] Branch to cost1/wip\n",
+      " 1 file changed, 19 insertions(+), 12 deletions(-)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   5233439..7b2c89f  master -> master\n"
+      "error: unknown switch `p'\n",
+      "usage: git push [<options>] [<repository> [<refspec>...]]\n",
+      "\n",
+      "    -v, --verbose         be more verbose\n",
+      "    -q, --quiet           be more quiet\n",
+      "    --repo <repository>   repository\n",
+      "    --all                 push all refs\n",
+      "    --mirror              mirror all refs\n",
+      "    -d, --delete          delete refs\n",
+      "    --tags                push tags (can't be used with --all or --mirror)\n",
+      "    -n, --dry-run         dry run\n",
+      "    --porcelain           machine-readable output\n",
+      "    -f, --force           force updates\n",
+      "    --force-with-lease[=<refname>:<expect>]\n",
+      "                          require old value of ref to be at this value\n",
+      "    --recurse-submodules[=<check|on-demand|no>]\n",
+      "                          control recursive pushing of submodules\n",
+      "    --thin                use thin pack\n",
+      "    --receive-pack <receive-pack>\n",
+      "                          receive pack program\n",
+      "    --exec <receive-pack>\n",
+      "                          receive pack program\n",
+      "    -u, --set-upstream    set upstream for git pull/status\n",
+      "    --progress            force progress reporting\n",
+      "    --prune               prune locally removed refs\n",
+      "    --no-verify           bypass pre-push hook\n",
+      "    --follow-tags         push missing but relevant tags\n",
+      "    --signed[=<yes|no|if-asked>]\n",
+      "                          GPG sign the push\n",
+      "    --atomic              request atomic transaction on remote side\n",
+      "    -o, --push-option <server-specific>\n",
+      "                          option to transmit\n",
+      "    -4, --ipv4            use IPv4 addresses only\n",
+      "    -6, --ipv6            use IPv6 addresses only\n",
+      "\n"
      ]
     }
    ],
@@ -62,7 +95,7 @@
     "%%bash\n",
     "git add Titanic.ipynb\n",
     "git commit -m 'Branch to cost1/wip'\n",
-    "git push --set -upstream origin cost1/wip"
+    "git push --set-upstream origin cost1/wip"
    ]
   },
   {
