Added some markdown and modified code

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,32 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Master branch. Will diverge from this branch when want to try something new."
+    "## cost1\n",
+    "Will try to modify cost of XGboost to see improvement. This one does not drop names and drop all Nan data.\n",
+    "    - Scale Positive Weight of 1.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Switched to a new branch 'cost1/wip'\n",
-      "Already on 'cost1/wip'\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -45,56 +27,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[cost1/wip 4e7787a] Branch to cost1/wip\n",
-      " 1 file changed, 19 insertions(+), 12 deletions(-)\n"
+      "[cost1/wip ddd7f3c] Branch to cost1/wip\n",
+      " 1 file changed, 39 insertions(+), 6 deletions(-)\n",
+      "Branch cost1/wip set up to track remote branch cost1/wip from origin.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: unknown switch `p'\n",
-      "usage: git push [<options>] [<repository> [<refspec>...]]\n",
-      "\n",
-      "    -v, --verbose         be more verbose\n",
-      "    -q, --quiet           be more quiet\n",
-      "    --repo <repository>   repository\n",
-      "    --all                 push all refs\n",
-      "    --mirror              mirror all refs\n",
-      "    -d, --delete          delete refs\n",
-      "    --tags                push tags (can't be used with --all or --mirror)\n",
-      "    -n, --dry-run         dry run\n",
-      "    --porcelain           machine-readable output\n",
-      "    -f, --force           force updates\n",
-      "    --force-with-lease[=<refname>:<expect>]\n",
-      "                          require old value of ref to be at this value\n",
-      "    --recurse-submodules[=<check|on-demand|no>]\n",
-      "                          control recursive pushing of submodules\n",
-      "    --thin                use thin pack\n",
-      "    --receive-pack <receive-pack>\n",
-      "                          receive pack program\n",
-      "    --exec <receive-pack>\n",
-      "                          receive pack program\n",
-      "    -u, --set-upstream    set upstream for git pull/status\n",
-      "    --progress            force progress reporting\n",
-      "    --prune               prune locally removed refs\n",
-      "    --no-verify           bypass pre-push hook\n",
-      "    --follow-tags         push missing but relevant tags\n",
-      "    --signed[=<yes|no|if-asked>]\n",
-      "                          GPG sign the push\n",
-      "    --atomic              request atomic transaction on remote side\n",
-      "    -o, --push-option <server-specific>\n",
-      "                          option to transmit\n",
-      "    -4, --ipv4            use IPv4 addresses only\n",
-      "    -6, --ipv6            use IPv6 addresses only\n",
-      "\n"
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      " * [new branch]      cost1/wip -> cost1/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Branch to cost1/wip'\n",
+    "git commit -m 'Added some markdown and modified code'\n",
     "git push --set-upstream origin cost1/wip"
    ]
   },
@@ -109,7 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "filename = 'cost1.sav'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -297,7 +258,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,6 +1376,7 @@
     "clf = xgb.XGBClassifier(\n",
     "        nthread = 1,\n",
     "        silent = 1,\n",
+    "        scale_pos_weight=1.5\n",
     "        )\n",
     "# specify parameters via map\n",
     "parameters = {'objective':['binary:logistic'],\n",
@@ -1492,6 +1454,10 @@
     "        subsample = best_param_4CV['subsample']\n",
     "        )\n",
     "clf2.fit(X_train,y_train)\n",
+    "\n",
+    "# save the model to disk\n",
+    "pickle.dump(clf2, open(filename, 'wb'))\n",
+    "\n",
     "from sklearn.metrics import accuracy_score\n",
     "print('Accuracy:'+str(accuracy_score(y_train,clf2.predict(X_train))))"
    ]
