Moved to new branch

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "## Kaggle Titanic\n",
-    "### feat1/wip\n",
-    "This branch is the version where we keep all NaN feature to see change in performance."
+    "### cost1/feat1/wip\n",
+    "This branch is the version where we keep all NaN feature to see change in performance. And modified Positive weight scale to 1.5"
    ]
   },
   {
@@ -37,8 +37,8 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Added confusion matrix'\n",
-    "git push --set-upstream origin feat1/wip"
+    "git commit -m 'Moved to new branch'\n",
+    "git push --set-upstream origin cost1/feat1/wip"
    ]
   },
   {
