--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,31 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "* cost1/feat1/wip\n",
-      "  cost1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/wip\n",
-      "  master\n"
+      "error: pathspec 'feat2' did not match any file(s) known to git.\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git checkout 'feat2/wip'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -44,49 +40,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[cost1/feat1/wip 6d9207c] Finished testing\n",
-      " 1 file changed, 1309 insertions(+), 1284 deletions(-)\n"
+      "[cost1/feat1/wip 8d22f00] Finished testing\n",
+      " 1 file changed, 39 insertions(+), 16 deletions(-)\n",
+      "Branch cost1/feat1/wip set up to track remote branch cost1/feat1/wip from origin.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: unknown switch `p'\n",
-      "usage: git push [<options>] [<repository> [<refspec>...]]\n",
-      "\n",
-      "    -v, --verbose         be more verbose\n",
-      "    -q, --quiet           be more quiet\n",
-      "    --repo <repository>   repository\n",
-      "    --all                 push all refs\n",
-      "    --mirror              mirror all refs\n",
-      "    -d, --delete          delete refs\n",
-      "    --tags                push tags (can't be used with --all or --mirror)\n",
-      "    -n, --dry-run         dry run\n",
-      "    --porcelain           machine-readable output\n",
-      "    -f, --force           force updates\n",
-      "    --force-with-lease[=<refname>:<expect>]\n",
-      "                          require old value of ref to be at this value\n",
-      "    --recurse-submodules[=<check|on-demand|no>]\n",
-      "                          control recursive pushing of submodules\n",
-      "    --thin                use thin pack\n",
-      "    --receive-pack <receive-pack>\n",
-      "                          receive pack program\n",
-      "    --exec <receive-pack>\n",
-      "                          receive pack program\n",
-      "    -u, --set-upstream    set upstream for git pull/status\n",
-      "    --progress            force progress reporting\n",
-      "    --prune               prune locally removed refs\n",
-      "    --no-verify           bypass pre-push hook\n",
-      "    --follow-tags         push missing but relevant tags\n",
-      "    --signed[=<yes|no|if-asked>]\n",
-      "                          GPG sign the push\n",
-      "    --atomic              request atomic transaction on remote side\n",
-      "    -o, --push-option <server-specific>\n",
-      "                          option to transmit\n",
-      "    -4, --ipv4            use IPv4 addresses only\n",
-      "    -6, --ipv6            use IPv6 addresses only\n",
-      "\n"
+      "To github.com:Theerit/Kaggle_Titanic.git\n",
+      "   ae5ba9e..8d22f00  cost1/feat1/wip -> cost1/feat1/wip\n"
      ]
     }
    ],
