--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: pathspec 'feat2' did not match any file(s) known to git.\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
@@ -31,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -40,8 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[cost1/feat1/wip 8d22f00] Finished testing\n",
-      " 1 file changed, 39 insertions(+), 16 deletions(-)\n",
+      "[cost1/feat1/wip 7a3b0b6] Finished testing\n",
+      " 1 file changed, 10 insertions(+), 46 deletions(-)\n",
       "Branch cost1/feat1/wip set up to track remote branch cost1/feat1/wip from origin.\n"
      ]
     },
@@ -50,7 +53,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   ae5ba9e..8d22f00  cost1/feat1/wip -> cost1/feat1/wip\n"
+      "   8d22f00..7a3b0b6  cost1/feat1/wip -> cost1/feat1/wip\n"
      ]
     }
    ],
