Moved to new branch

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -21,16 +21,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: Your local changes to the following files would be overwritten by checkout:\n",
-      "\tTitanic.ipynb\n",
-      "Please commit your changes or stash them before you switch branches.\n",
-      "Aborting\n"
+      "Switched to a new branch 'cost1/feat2/wip'\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git checkout 'master'\n",
+    "git checkout -b 'cost1/feat2/wip'\n",
     "git fetch"
    ]
   },
@@ -62,8 +59,8 @@
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Finised testing'\n",
-    "git push --set-upstream origin feat2/wip"
+    "git commit -m 'Moved to new branch'\n",
+    "git push --set-upstream origin cost1/feat2/wip"
    ]
   },
   {
