Added markdown and code

--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -7,33 +7,13 @@
     "## Kaggle Titanic\n",
     "### feat2/wip\n",
     "This branch is modified from feat1. Changes are\n",
-    "    - Drop the name feature in addition to passengerID (it seem redundancy)"
+    "    - Drop the name feature in addition to passengerID (it seem redundancy)\n",
+    "    - Add positive class weight of 1.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Switched to a new branch 'cost1/feat2/wip'\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%bash\n",
-    "git checkout -b 'cost1/feat2/wip'\n",
-    "git fetch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -42,9 +22,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat2/wip 8830e17] Finised testing\n",
-      " 1 file changed, 1380 insertions(+), 1410 deletions(-)\n",
-      "Branch feat2/wip set up to track remote branch feat2/wip from origin.\n"
+      "[cost1/feat2/wip cb02d82] Moved to new branch\n",
+      " 1 file changed, 5 insertions(+), 8 deletions(-)\n",
+      "Branch cost1/feat2/wip set up to track remote branch cost1/feat2/wip from origin.\n"
      ]
     },
     {
@@ -52,14 +32,14 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   485571a..8830e17  feat2/wip -> feat2/wip\n"
+      " * [new branch]      cost1/feat2/wip -> cost1/feat2/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Moved to new branch'\n",
+    "git commit -m 'Added markdown and code'\n",
     "git push --set-upstream origin cost1/feat2/wip"
    ]
   },
@@ -3545,6 +3525,7 @@
     "clf = xgb.XGBClassifier(\n",
     "        nthread = 1,\n",
     "        silent = 1,\n",
+    "        scale_pos_weight =1.5\n",
     "        )\n",
     "# specify parameters via map\n",
     "parameters = {'objective':['binary:logistic'],\n",
