--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -13,7 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git checkout 'feat1/wip'\n",
+    "git fetch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -22,8 +46,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[cost1/feat2/wip 1007795] Added markdown and code\n",
-      " 1 file changed, 9 insertions(+), 28 deletions(-)\n",
+      "[cost1/feat2/wip 71465fe] Finised testing\n",
+      " 1 file changed, 987 insertions(+), 996 deletions(-)\n",
       "Branch cost1/feat2/wip set up to track remote branch cost1/feat2/wip from origin.\n"
      ]
     },
@@ -32,7 +56,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   cb02d82..1007795  cost1/feat2/wip -> cost1/feat2/wip\n"
+      "   1007795..71465fe  cost1/feat2/wip -> cost1/feat2/wip\n"
      ]
     }
    ],
