--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -11,21 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "* cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/wip\n",
-      "  master\n"
+      "error: Your local changes to the following files would be overwritten by checkout:\n",
+      "\tTitanic.ipynb\n",
+      "Please commit your changes or stash them before you switch branches.\n",
+      "Aborting\n"
      ]
     }
    ],
@@ -37,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -46,8 +44,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[cost1/feat1/wip 7a3b0b6] Finished testing\n",
-      " 1 file changed, 10 insertions(+), 46 deletions(-)\n",
+      "[cost1/feat1/wip 28d93a0] Re-testing with weighting in test set\n",
+      " 1 file changed, 1209 insertions(+), 1186 deletions(-)\n",
       "Branch cost1/feat1/wip set up to track remote branch cost1/feat1/wip from origin.\n"
      ]
     },
@@ -56,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   8d22f00..7a3b0b6  cost1/feat1/wip -> cost1/feat1/wip\n"
+      "   a47c085..28d93a0  cost1/feat1/wip -> cost1/feat1/wip\n"
      ]
     }
    ],
