--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -12,33 +12,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  cost1/feat1/wip\n",
-      "  cost1/feat2/wip\n",
-      "  cost1/wip\n",
-      "* feat1/score1/wip\n",
-      "  feat1/wip\n",
-      "  feat2/wip\n",
-      "  master\n"
+      "commit 7359cd216362a93690ac0c24b104c6f4e2074803\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Fri Dec 15 17:39:08 2017 +0700\n",
+      "\n",
+      "    Changed to new branch\n",
+      "\n",
+      "commit 5a4bd4a2adecbb10e68c7b12f568c03baa8eed6f\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Tue Dec 12 17:54:55 2017 +0700\n",
+      "\n",
+      "    Added confusion matrix\n",
+      "\n",
+      "commit d2c9b104a321efb34db3a25bae035d9756bdad6a\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sun Dec 10 10:43:26 2017 +0700\n",
+      "\n",
+      "    Added confusion matrix\n",
+      "\n",
+      "commit 8a8141e8665f5a4dadb8b69eb68b29861d05888d\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sun Dec 10 09:45:55 2017 +0700\n",
+      "\n",
+      "    Added pickle code to save trained model\n",
+      "\n",
+      "commit 6932f53d359980c6717c3ae8bc42ae486064c70b\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sat Dec 9 17:05:00 2017 +0700\n",
+      "\n",
+      "    Finised testing this version\n",
+      "\n",
+      "commit 41ddc0afa111f9f6f2442735c507880fa8a7131e\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sat Dec 9 17:04:45 2017 +0700\n",
+      "\n",
+      "    Finised testing this version\n",
+      "\n",
+      "commit 704abb35896e56a79d084c23cccf81916c3d4410\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sat Dec 9 16:56:08 2017 +0700\n",
+      "\n",
+      "    Finised training and test on test set\n",
+      "\n",
+      "commit 2f16b259679e5fd076c0dd940ddaba2e6753b868\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sat Dec 9 16:54:56 2017 +0700\n",
+      "\n",
+      "    Finised training and test on test set\n",
+      "\n",
+      "commit 9ad077fc0d8a50c53931869933bd781821d67493\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sat Dec 9 16:10:55 2017 +0700\n",
+      "\n",
+      "    Changed to new branch\n",
+      "\n",
+      "commit af209b153bde452b29a53b30300858e78bcd4e30\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Fri Dec 8 17:40:38 2017 +0700\n",
+      "\n",
+      "    Implemented basic Xgboost code\n",
+      "\n",
+      "commit ed110ea0c4b932fac0c0bddace79507662032a7a\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Wed Dec 6 17:27:29 2017 +0700\n",
+      "\n",
+      "    Adding Xgboost code\n",
+      "\n",
+      "commit fe206848a53113bb5ddb2218d511a8c28d3dd487\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Wed Nov 22 19:57:20 2017 +0700\n",
+      "\n",
+      "    Add Feature Evaluation by random forest (sort of)\n",
+      "\n",
+      "commit cabb71aadeea692e730818440e63841a045d0e3a\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Wed Nov 22 19:29:25 2017 +0700\n",
+      "\n",
+      "    Add dummy variables code\n",
+      "\n",
+      "commit 8b9b277f6efbeb2abb858d56567f079987f7a647\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Tue Nov 21 19:38:34 2017 +0700\n",
+      "\n",
+      "    Add categorical count plot\n",
+      "\n",
+      "commit 0bbcea0b15b8346473ac1fc1b788255a2f07c53c\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Tue Nov 21 19:11:38 2017 +0700\n",
+      "\n",
+      "    Solve pair plot issue (4 Numerical attributes and color by Survived Class)\n",
+      "\n",
+      "commit 0eaff2f98a83582d98631eb0f082b6b1b32eee55\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sun Nov 19 16:08:49 2017 +0700\n",
+      "\n",
+      "    Stuck at pairplot\n",
+      "\n",
+      "commit 6eea3479df5418459a8a3d6794cf7ff2a888aec0\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sun Nov 19 15:55:29 2017 +0700\n",
+      "\n",
+      "    Added some numerical distribution plots\n",
+      "\n",
+      "commit b5ce9e36e40bb309eca97dd73209fcbe54141cb5\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sun Nov 19 15:33:31 2017 +0700\n",
+      "\n",
+      "    Adding some basic code from prvious working file_2\n",
+      "\n",
+      "commit 22bc8061e47a87c66ec476b49f2fad799a45692b\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sun Nov 19 15:12:32 2017 +0700\n",
+      "\n",
+      "    Adding some basic code from prvious working file\n",
+      "\n",
+      "commit 5ac4050096e206a87fe92fc26802d02debe905b9\n",
+      "Author: Theerit <Theerit.L@gmail.com>\n",
+      "Date:   Sat Nov 18 14:21:38 2017 +0700\n",
+      "\n",
+      "    Starting\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "git branch"
+    "git log"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -47,9 +159,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[feat1/wip 8a8141e] Added pickle code to save trained model\n",
-      " 1 file changed, 82 insertions(+), 3 deletions(-)\n",
-      "Branch feat1/wip set up to track remote branch feat1/wip from origin.\n"
+      "[feat1/score1/wip 7359cd2] Changed to new branch\n",
+      " 1 file changed, 14 insertions(+), 114 deletions(-)\n",
+      "Branch feat1/score1/wip set up to track remote branch feat1/score1/wip from origin.\n"
      ]
     },
     {
@@ -57,15 +169,26 @@
      "output_type": "stream",
      "text": [
       "To github.com:Theerit/Kaggle_Titanic.git\n",
-      "   6932f53..8a8141e  feat1/wip -> feat1/wip\n"
+      " * [new branch]      feat1/score1/wip -> feat1/score1/wip\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add Titanic.ipynb\n",
-    "git commit -m 'Changed to new branch'\n",
+    "git commit -m 'Added markdown and modified score to accuracy'\n",
     "git push --set-upstream origin feat1/score1/wip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "filename = 'feat1/score1.sav'"
    ]
   },
   {
@@ -3566,7 +3689,7 @@
     "              'colsample_bytree': np.arange(0.5,0.9,0.1).tolist()}\n",
     "clf = GridSearchCV(clf, parameters, n_jobs=1, \n",
     "                   cv=4, \n",
-    "                   scoring='roc_auc',\n",
+    "                   scoring='accuracy',\n",
     "                   verbose=2, refit=False)\n",
     "clf.fit(X_train,y_train)\n",
     "best_param_4CV = clf.best_params_"
@@ -3627,7 +3750,6 @@
     "        )\n",
     "clf2.fit(X_train,y_train)\n",
     "# save the model to disk\n",
-    "filename = 'feat1.sav'\n",
     "pickle.dump(clf2, open(filename, 'wb'))\n",
     " \n",
     "from sklearn.metrics import accuracy_score\n",
